# Wehopon

./: .coverage  .coverage 3  .coverage 4  .coverage 5  .coverage 6  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  MASTER_TODO.md  Makefile  README.md  TEST_CHECKLIST.md  lab.toml.example  middleware.ts  package-lock.json  package.json  prisma.config.ts  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
.kilo/: kilo.jsonc
.planning/: STATE.md
app/: globals.css  layout.tsx  page.tsx
app/(auth)/login/: page.tsx
app/(auth)/signup/: page.tsx
app/dashboard/: page.tsx
docs/: ARCHITECTURE.md  HARDWARE.md  HIL_CHECKLIST.md  LEGAL_AND_ETHICS.md  PHASE_ROADMAP.md  PROJECT_PLAN.md  PROJECT_STATUS.md  TECHNICAL_BLUEPRINT.md  USER_GUIDE.md  architecture.html
prisma/: schema.prisma
src/handshakelab/: __init__.py  __main__.py  ai_wordlist.py  capture.py  cli.py  config.py  convert.py  crack.py  crack_enhanced.py  doctor.py  eapol.py  legal.py  pipeline.py  report.py  server.py  sniffer.py  vault.py  wordlist_gen.py
src/handshakelab/data/: common-lab.txt
src/handshakelab/util/: platform.py  proc.py  wifi.py
src/handshakelab/web/: app.js  index.html  styles.css
tests/: conftest.py  test_ai_wordlist.py  test_ai_wordlist_extra.py  test_capture_extra.py  test_cli.py  test_cli_extra.py  test_config.py  test_convert.py  test_convert_extra.py  test_crack.py  test_crack_enhanced_extra.py  test_crack_extra.py  test_doctor.py  test_eapol.py  test_eapol_extra.py  test_legal.py  test_legal_extra.py  test_pipeline.py  test_pipeline_extra.py  test_platform.py  test_proc.py  test_report.py  test_report_extra.py  test_server.py  test_server_extra.py  test_sniffer_extra.py  test_vault.py  test_wifi.py  test_wordlist_gen.py  test_wordlist_gen_extra.py
tests/fixtures/: README.md  test_config.toml
