[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handshakelab"
version = "0.3.1"
description = "Offline WiFi handshake capture and crack workstation for authorized product testing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ufonik" }]
dependencies = [
  "typer>=0.15.0",
  "rich>=13.9.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "mypy>=1.10.0",
  "httpx>=0.27.0",
  "pre-commit>=3.7.0",
]

[project.scripts]
handshakelab = "handshakelab.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
handshakelab = ["web/**/*", "data/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=handshakelab --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true